padding fix on tablet and lower

--- a/public/stylesheets/sass/listing.scss
+++ b/public/stylesheets/sass/listing.scss
@@ -155,9 +155,12 @@ hr#listing-divider {
 }
 
 //---- xl container ---//
-@media (max-width: 1399px) {
+@media (min-width: 769px) {
   .listing-container {
     width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+
   }
 }
 
@@ -166,6 +169,7 @@ hr#listing-divider {
   .agent-business-name {
     text-align: left;
   }
+
 }
 
 //---- Tablet ---//
@@ -176,6 +180,11 @@ hr#listing-divider {
     margin-right: auto;
 
     float: none !important;
+  }
+
+  .listing-container{
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   .listing-contact-agent-name {
